<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:theme="@style/AppTheme">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Add Recipe"
            android:textColor="#000"
            android:textSize="30dp" />

        <EditText
            android:id="@+id/etRecipeName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Recipe Name"
            android:inputType="textPersonName" />

        <Spinner
            android:id="@+id/vCategorySpinner"
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <!--  START OF INGREDIENTS FORM -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tietIngredient"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Ingredient" />

            <ScrollView
                android:id="@+id/vScrollView"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:fillViewport="true"
                android:isScrollContainer="true"
                android:padding="5dp">

                <!-- note for Material Chip (not ChipGroup!):
                    style="@style/Widget.MaterialComponents.Chip.Entry":
                        - to show the close icon
                        - style of Material Chip can be: Entry, Choice, Action, and Filter
                -->
                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/chipGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </ScrollView>

            <!--
                orientation & weightSum
                    - weightSum is based on orientation.
                    - weightSum is the total weight for all children tags:
                        - in our case, Add button and Show button share the weight.
                    - although we use weightSum for the horizontal direction and don't use layout_width, we still need to declare layout_width to 0dp.
            -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnAddIngredient"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="4dp"
                    android:layout_weight="1"
                    android:text="Add Ingredient"
                    app:backgroundTint="@color/colorPrimaryDark" />

            </LinearLayout>

        </LinearLayout>
        <!--  END OF INGREDIENTS FORM -->

        <!-- add a line separating ingredients and instructions -->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />

        <!--  START OF INSTRUCTION FORM -->
        <!-- fixed height instead of wrap_content such that it won't disappear when there are no texts.-->
        <EditText
            android:id="@+id/etRecipeInstructions"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:gravity="top"
            android:hint="Recipe Instructions \n(one instruction per line)"
            android:inputType="text|textMultiLine" />
        <!--  END OF INSTRUCTION FORM -->

        <Button
            android:id="@+id/btnAddRecipe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Add Recipe" />

    </LinearLayout>

</LinearLayout>