<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="net.team5.pocketchef.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_user_profile"
        android:name="net.team5.pocketchef.ui.user_profile.UserProfileFragment"
        android:label="User Profile"
        tools:layout="@layout/fragment_user_profile" />

    <fragment
        android:id="@+id/navigation_add_recipe"
        android:name="net.team5.pocketchef.ui.add_recipe.FragmentAddRecipe"
        android:label="Add Recipe"
        tools:layout="@layout/fragment_add_recipe" />

</navigation>