...
            android:layout_gravity="center_horizontal|center_vertical"
            android:background="#00FFFFFF"
            app:srcCompat="@drawable/whitelogo" />
    </FrameLayout>

    <Button
        android:id="@+id/searchButton"
        android:layout_width="538dp"
        android:layout_height="68dp"

        android:layout_alignParentBottom="true"


        android:layout_gravity="center"
        android:layout_marginBottom="0dp"
        android:fontFamily="sans-serif-medium"
        android:text="Search Recipe"
        android:textColor="#0267a6"

        android:textSize="30sp"
        android:textStyle="normal"
        app:backgroundTint="#FFFFFF"
        app:cornerRadius="55dp" />
...
